RESOLVED FIXED112074
webdatabase: Fix some FIXMEs in WebDatabaseManagerProxy
https://bugs.webkit.org/show_bug.cgi?id=112074
Summary webdatabase: Fix some FIXMEs in WebDatabaseManagerProxy
Mark Lam
Reported 2013-03-11 15:56:18 PDT
The WebDatabaseManagerProxy has some FIXMEs in methods that send messages for the purpose of managing origins and instances of WebSQL databases. These methods were broadcasting the messages to all WebProcesses. Instead, it should only send to one.
Attachments
the patch. (7.04 KB, patch)
2013-03-11 16:13 PDT, Mark Lam
ap: review+
Mark Lam
Comment 1 2013-03-11 15:57:51 PDT
Mark Lam
Comment 2 2013-03-11 16:13:54 PDT
Created attachment 192588 [details] the patch.
Mark Lam
Comment 3 2013-03-11 16:38:56 PDT
Thanks for the review. Landed in r145426: <http://trac.webkit.org/changeset/145426>.
Note You need to log in before you can comment on or make changes to this bug.